--- a/api/package.json
+++ b/api/package.json
@@ -2,9 +2,9 @@
   "name": "api",
   "version": "1.0.0",
   "description": "ScholaSphere: Your go-to hub for AAU students. Access books, notes, and quizzes tailored to your courses. Excel in your academic journey with our centralized platform",
-  "main": "index.js",
-  "prisma":{
-    "seed" : "node --require esbuild-register prisma/seed.ts"
+  "main": "index.ts",
+  "prisma": {
+    "seed": "node --require esbuild-register prisma/seed.ts"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -15,11 +15,17 @@
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^5.13.0",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
-    "typescript": "^5.4.5"
+    "jsonwebtoken": "^9.0.2",
+    "typescript": "^5.4.5",
+    "uuid": "^9.0.1",
+    "validatorjs": "^3.22.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
