--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
@@ -25,6 +26,8 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "uuid": "^9.0.1",
@@ -38,11 +41,12 @@
     "@types/express": "^4.17.21",
     "@types/express-session": "^1.18.0",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.12.11",
     "@types/uuid": "^9.0.8",
     "esbuild-register": "^3.5.0",
     "nodemon": "^3.1.0",
     "prisma": "^5.13.0",
-    "typescipt": "^1.0.0"
+    "typescript": "^4.5.4"
   }
 }
