--- a/api/package.json
+++ b/api/package.json
@@ -31,7 +31,8 @@
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "uuid": "^9.0.1",
-    "validatorjs": "^3.22.1"
+    "validatorjs": "^3.22.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
