--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -12,6 +12,6 @@
       "outDir": "./dist",
       "rootDir": "./src"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "src/utils/req.d.ts"],
   "exclude": ["node_modules", "dist"]
 }
