--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -10,7 +10,11 @@
       "skipLibCheck": true,
       "forceConsistentCasingInFileNames": true,
       "outDir": "./dist",
-      "rootDir": "./src"
+      "rootDir": "./src",
+      "typeRoots": ["./node_modules/@types", "./src/@types"],
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src/**/*", "src/utils/req.d.ts"],
   "exclude": ["node_modules", "dist"]
