--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "animate.css": "^4.1.1",
+    "axios": "^1.7.2",
+    "dotenv": "^16.4.5",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
