--- a/ui/package.json
+++ b/ui/package.json
@@ -12,11 +12,15 @@
     "@hookform/resolvers": "^3.6.0",
     "animate.css": "^4.1.1",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
+    "framer-motion": "^11.2.10",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-toastify": "^10.0.5",
+    "tailwind-merge": "^2.3.0",
     "zod": "^3.23.8",
     "zustand": "^4.5.2",
     "zustand-persist": "^0.4.0"
