--- a/ui/package.json
+++ b/ui/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "@tabler/icons-react": "^3.6.0",
     "animate.css": "^4.1.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "framer-motion": "^11.2.10",
+    "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
