--- a/ui/package.json
+++ b/ui/package.json
@@ -10,19 +10,24 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tabler/icons-react": "^3.6.0",
     "animate.css": "^4.1.1",
     "axios": "^1.7.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
-    "framer-motion": "^11.2.10",
+    "framer-motion": "^11.3.2",
+    "lucide-react": "^0.408.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-toastify": "^10.0.5",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8",
     "zustand": "^4.5.2",
     "zustand-persist": "^0.4.0"
