--- a/ui/package.json
+++ b/ui/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.408.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
