--- a/api/package.json
+++ b/api/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "description": "ScholaSphere: Your go-to hub for AAU students. Access books, notes, and quizzes tailored to your courses. Excel in your academic journey with our centralized platform",
   "main": "index.ts",
+  
   "prisma": {
     "seed": "node --require esbuild-register prisma/seed.ts"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon src/index.ts"
+    "dev": "nodemon src/index.ts",
+    "start": "node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -29,7 +31,6 @@
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.2.2",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5",
     "uuid": "^9.0.1",
     "validatorjs": "^3.22.1",
     "zod": "^3.23.8"
@@ -48,6 +49,6 @@
     "esbuild-register": "^3.5.0",
     "nodemon": "^3.1.0",
     "prisma": "^5.13.0",
-    "typescript": "^4.5.4"
+    "typescript": "^4.9.5"
   }
 }
