--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -24,71 +24,40 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        directory: [ui, api]
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
-      - name: Detect package manager
-        id: detect-package-manager
-        run: |
-          if [ -f "${{ github.workspace }}/ui/yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            echo "runner=yarn --cwd ui" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "${{ github.workspace }}/api/yarn.lock" ]; then
-            echo "manager=yarn" >> $GITHUB_OUTPUT
-            echo "command=install" >> $GITHUB_OUTPUT
-            echo "runner=yarn --cwd api" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "${{ github.workspace }}/ui/package.json" ]; then
-            echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "command=ci" >> $GITHUB_OUTPUT
-            echo "runner=npx --no-install --prefix ui" >> $GITHUB_OUTPUT
-            exit 0
-          elif [ -f "${{ github.workspace }}/api/package.json" ]; then
-            echo "manager=npm" >> $GITHUB_OUTPUT
-            echo "command=ci" >> $GITHUB_OUTPUT
-            echo "runner=npx --no-install --prefix api" >> $GITHUB_OUTPUT
-            exit 0
-          else
-            echo "Unable to determine package manager"
-            exit 1
-          fi
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: ${{ steps.detect-package-manager.outputs.manager }}
-
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-        with:
-          # Automatically inject basePath in your Next.js configuration file and disable
-          # server side image optimization (https://nextjs.org/docs/api-reference/next/image#unoptimized).
-          #
-          # You may remove this line if you want to manage the configuration yourself.
-          static_site_generator: next
-
-      - name: Restore cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            .next/cache
-          # Generate a new cache whenever packages or source files change.
-          key: ${{ runner.os }}-nextjs-${{ hashFiles('ui/package-lock.json', 'ui/yarn.lock', 'api/package-lock.json', 'api/yarn.lock') }}-${{ hashFiles('**.[jt]s', '**.[jt]sx') }}
-          # If source files changed but packages didn't, rebuild from a prior cache.
-          restore-keys: |
-            ${{ runner.os }}-nextjs-${{ hashFiles('ui/package-lock.json', 'ui/yarn.lock', 'api/package-lock.json', 'api/yarn.lock') }}-
+          cache: ${{ matrix.directory }}
+          cache-dependency-path: ${{ matrix.directory }}/yarn.lock
 
       - name: Install dependencies
-        run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
+        run: |
+          cd ${{ matrix.directory }}
+          if [ -f "yarn.lock" ]; then
+            yarn install
+          elif [ -f "package-lock.json" ]; then
+            npm ci
+          else
+            echo "No dependency lock file found!"
+            exit 1
+        working-directory: ${{ matrix.directory }}
 
       - name: Build with Next.js
-        run: ${{ steps.detect-package-manager.outputs.runner }} next build
+        run: |
+          cd ${{ matrix.directory }}
+          yarn next build || npm run build
 
       - name: Upload artifact
+        if: matrix.directory == 'ui'
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./ui/out
