--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.ts",
-    "start": "node dist/index.js",
+    "start":   "npx prisma migrate deploy --preview-feature && npx prisma db seed && node dist/index.js",
     "build": "npm install && tsc"
   },
   "keywords": [],
